# Log20

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-multi-platform.yml
Log20/src/: AsyncTaskQueue.ixx  DefaultLogger.cxx
Test/: CMakeLists.txt
cmake/: cpp_modules.cmake
conan/: catch2.cmake
log20/: CMakeLists.txt
log20/include/log20/: DefaultLogger.ixx  Logger.ixx  log20.ixx
log20/src/: AsyncTaskQueue.ixx
test/: CMakeLists.txt
